--- a/assets/style.css
+++ b/assets/style.css
@@ -102,19 +102,18 @@ main {
   font-size: 12px;
   text-align: center;
   display: inline-block;
-  transform: translateY(-35px);
+  transform: translateY(-30px);
   z-index: 9999;
 }
 
 .clippath {
-
   content: "";
-  transform: translateY(-18px);
+  transform: translateY(-15.5px);
 
-  height: 18px;
+  height: 14px;
   clip-path: polygon(5% 0, 95% 0, 100% 100%, 0% 100%);
 
-  width: 153px;
+  width: 150px;
 
   z-index: -9 !important;
   background: #d7445b;
@@ -141,9 +140,21 @@ main {
   line-height: 100%;
   letter-spacing: 0%;
   text-align: center;
-  background: linear-gradient(to right,var(--primary-color),#ef764acd);
+  background: linear-gradient(to right, var(--primary-color), #ef764acd);
   color: white;
-  margin-left: 3px;
+  position: relative;
+  margin-left: 10px;
+}
+.discount::after {
+  position: absolute;
+  content: "";
+  right: 100%;
+  width: 10px;
+  height: 15px;
+  background: #D7445B;
+  top: 0;
+  clip-path: polygon(100% 0, 100% 1%, 99% 71%, 0 100%);
+
 }
 .top_content {
   display: flex;
@@ -236,6 +247,13 @@ del {
   cursor: pointer;
   margin-top: 15px;
   width: 100%;
+  transition: .2s;
+}
+.add-to-cart:hover {
+ 
+
+  background-color:#fe546e;
+
 }
 
 .plus-icon {
@@ -297,7 +315,6 @@ td {
   outline: 2px solid #ff6f8d;
 }
 /* ========responsive========== */
-
 
 @media (max-width: 768px) {
   .container {
