--- a/assets/style.css
+++ b/assets/style.css
@@ -177,6 +177,7 @@ main {
   line-height: 100%;
   letter-spacing: 0%;
   padding-top: 10px;
+  padding-left: 25px;
 }
 del {
   font-family: Inter;
